--- a/index.html
+++ b/index.html
@@ -1,6 +1,88 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Gadds Car Physics</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ultimate Vehicle Physics Engine</title>
+    <link rel="stylesheet" href="styles.css">
+    <!-- You can include any WebGL libraries here, e.g., Three.js -->
 </head>
+<body>
+    <header>
+        <div class="container">
+            <h1>VehiclePhysicsPro</h1>
+            <nav>
+                <ul>
+                    <li><a href="#intro">Home</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#demo">Demo</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section id="intro" class="intro">
+        <div class="container">
+            <h2>Revolutionize Your Vehicle Simulations</h2>
+            <p>Experience unparalleled realism with our modular and fully customizable vehicle physics package. Perfect for developers and enthusiasts alike.</p>
+            <a href="#demo" class="btn">Try the Demo</a>
+        </div>
+    </section>
+
+    <section id="features" class="features">
+        <div class="container">
+            <h2>Features</h2>
+            <div class="feature-list">
+                <div class="feature-item">
+                    <h3>Pacejka Tyre Model</h3>
+                    <p>Simulate accurate tyre behavior under various conditions with the advanced Pacejka model.</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Custom Gear Ratios</h3>
+                    <p>Define and adjust gear ratios to match your specific vehicle setup.</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Anti-Roll Bars</h3>
+                    <p>Enhance vehicle stability with configurable anti-roll bar settings.</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Torque Curves</h3>
+                    <p>Customize torque curves for precise engine performance tuning.</p>
+                </div>
+                <!-- Add more features as needed -->
+            </div>
+        </div>
+    </section>
+
+    <section id="demo" class="demo">
+        <div class="container">
+            <h2>Interactive Demo</h2>
+            <p>Test our vehicle physics in real-time using our WebGL-powered demo.</p>
+            <!-- Placeholder for WebGL content -->
+            <div id="webgl-demo">
+                <iframe src="your-webgl-demo-link" title="WebGL Demo" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="contact">
+        <div class="container">
+            <h2>Get in Touch</h2>
+            <p>Have questions or need support? Reach out to us!</p>
+            <form action="your-form-handler" method="POST">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+                <button type="submit" class="btn">Send Message</button>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2023 VehiclePhysicsPro. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
 </html>
