--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ultimate Vehicle Physics Engine</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="TemplateData/style.css">
     <!-- You can include any WebGL libraries here, e.g., Three.js -->
 </head>
 <body>
