--- a/index.html
+++ b/index.html
@@ -55,11 +55,22 @@
         </div>
     </section>
 
-    <section id="demo" class="demo">
-        <div class="container">
-            <h2>Interactive Demo</h2>
-            <p>Test our vehicle physics in real-time using our WebGL-powered demo.</p>
-            <script>
+    <div id="unity-container" class="unity-desktop">
+      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+      <div id="unity-loading-bar">
+        <div id="unity-logo"></div>
+        <div id="unity-progress-bar-empty">
+          <div id="unity-progress-bar-full"></div>
+        </div>
+      </div>
+      <div id="unity-warning"> </div>
+      <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">My project</div>
+      </div>
+    </div>
+    <script>
 
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
@@ -67,7 +78,13 @@
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
       var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var warningBanner = document.querySelector("#unity-warning");
-                
+
+      // Shows a temporary message banner/ribbon for a few seconds, or
+      // a permanent error message on top of the canvas if type=='error'.
+      // If type=='warning', a yellow highlight color is used.
+      // Modify or remove this function to customize the visually presented
+      // way that non-critical warnings and error messages are presented to the
+      // user.
       function unityShowBanner(msg, type) {
         function updateBannerVisibility() {
           warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
@@ -136,11 +153,6 @@
 
     </script>
 
-            <div id="webgl-demo">
-                <iframe src="your-webgl-demo-link" title="WebGL Demo" frameborder="0" allowfullscreen></iframe>
-            </div>
-        </div>
-    </section>
 
     <section id="contact" class="contact">
         <div class="container">
