--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <!-- Link to the external CSS file -->
     <link rel="stylesheet" href="style.css">
     <!-- Favicon (optional) -->
-    <link rel="icon" href="path/to/your/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="GaddLogo.png" type="image/x-icon">
 </head>
 <body>
     <!-- Header Section -->
     <header>
         <div class="logo-container">
             <!-- Replace 'path/to/logo.png' with the actual path to your logo -->
-            <img src="path/to/logo.png" alt="Car Physics Tool Logo" class="logo">
+            <img src="GaddLogo.png" alt="Car Physics Tool Logo" class="logo">
         </div>
         <!-- Theme Toggle Button -->
         <button id="theme-toggle" aria-label="Toggle Dark/Light Mode">🌙</button>
@@ -80,6 +80,6 @@
     <!-- Link to the external JavaScript file -->
     <script src="script.js"></script>
     <!-- Unity WebGL Loader (Replace with your actual Unity loader script) -->
-    <script src="Build/yourUnityBuild.loader.js"></script>
+    <script src="Build/Unity Builds.loader.js"></script>
 </body>
 </html>
