--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Link to the external CSS file -->
     <link rel="stylesheet" href="style.css">
     <!-- Favicon (optional) -->
-    <link rel="icon" href="path/to/your/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="GaddLogo.png" type="image/x-icon">
     <!-- Google Fonts (optional) -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -16,7 +16,7 @@
     <header>
         <div class="logo-container">
             <!-- Replace 'path/to/logo.png' with the actual path to your logo -->
-            <img src="path/to/logo.png" alt="Car Physics Tool Logo" class="logo">
+            <img src="GaddLogo.png" alt="Gadd Games" class="logo">
         </div>
         <!-- Navigation Menu -->
         <nav>
@@ -109,7 +109,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2023 Your Company Name. All rights reserved.</p>
+        <p>&copy; 2024 Gadd Games. All rights reserved.</p>
         <div class="social-links">
             <!-- Add your social media links here -->
             <a href="https://twitter.com/yourprofile" target="_blank" aria-label="Twitter">Twitter</a>
@@ -122,7 +122,7 @@
     <div id="demo-modal" class="modal">
         <div class="modal-content">
             <span class="close" id="close-demo">&times;</span>
-            <iframe src="https://yourwebglbuild.com" title="WebGL Demo" frameborder="0"></iframe>
+            <iframe src="https://lgadd.github.io/CarPhysicsWebGL" title="WebGL Demo" frameborder="0"></iframe>
         </div>
     </div>
 
