--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             <a href="https://twitter.com/yourprofile" target="_blank" aria-label="Twitter">Twitter</a>
             <a href="https://linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">LinkedIn</a>
             <a href="https://github.com/yourprofile" target="_blank" aria-label="GitHub">GitHub</a>
+            <a href="suspension.html" aria-label="Suspension">Suspension</a>
         </div>
     </footer>
 
